--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "my-app",
+    "name": "rtf-polybius",
     "version": "0.1.0",
     "private": true,
     "scripts": {
@@ -21,7 +21,7 @@
         "next-transpile-modules": "^3.3.0",
         "react": "16.13.1",
         "react-dom": "16.13.1",
-        "react-spring": "^8.0.27",
+        "react-spring": "9.0.0-rc.3",
         "react-three-fiber": "^4.2.17",
         "remark": "^12.0.0",
         "remark-html": "^11.0.1",
